--- a/CSS/chart-style.css
+++ b/CSS/chart-style.css
@@ -48,3 +48,16 @@
 .chart .chart-day.start {
     border-left: 3px solid #aaa;
 }
+
+.chart .chart-task {
+    border-radius: 5px;
+    width: 100%;
+    height: 20px;
+    background: lightblue;
+}
+
+.chart .chart-fill {
+    border-radius: 5px;
+    height: 20px;
+    background: darkblue;
+}
