Click to show/hide task notes implemented

--- a/CSS/chart-style.css
+++ b/CSS/chart-style.css
@@ -61,3 +61,9 @@
     height: 20px;
     background: darkblue;
 }
+
+.chart .task-notes {
+    background: white;
+    color: black;
+    display: none;
+}
