--- a/CSS/chart-style.css
+++ b/CSS/chart-style.css
@@ -6,6 +6,7 @@ figcaption {
 .chart {
     background: #002b36;
     color: #93a1a1;
+    align-items: flex-end;
     display: flex;
     display: -webkit-flex;
     flex-direction: row;
@@ -22,13 +23,6 @@ figcaption {
     table-layout: fixed;
     border-collapse: collapse;
     border: 3px solid #aaa;
-}
-
-.chart .side-top {
-    height: 42px;
-    margin: 0;
-    padding-top: 1px;
-    padding-bottom: 0px;
 }
 
 .chart .side-heading {
