--- a/Assets/CSS/page.css
+++ b/Assets/CSS/page.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
-    background-color: purple;
+    /* background-color: purple; */
     margin-left: auto;
     margin-right: auto;
     font-family: 'Roboto', sans-serif;
 }
 
+/*
 header {
     background-color: orange;
 }
@@ -14,7 +15,7 @@ header {
 main {
     background-color: crimson;
 }
-
+*/
 /* ==== */
 /* TEXT */
 /* ==== */
