--- a/Assets/CSS/page.css
+++ b/Assets/CSS/page.css
@@ -18,7 +18,10 @@ header {
 
 main {
     /*background-color: darkslategrey; */
-    background-image: url("../Images/chess-2.jpg") ;
+    background-image: url("../Images/Chess-Game.jpg");
+    background-size: 1536px 732px;
+    background-repeat: no-repeat;
+    background-position: center;
 
     /* Main width 80% of screen width and main height 60% */
     max-width: 80%;
