--- a/Assets/CSS/chart-style.css
+++ b/Assets/CSS/chart-style.css
@@ -1,35 +1,34 @@
 
-.chart {
-    padding: 40px;
-    border-radius: 10px;
-    /* background: #002b36; */
+figure {
     background-color: black;
-    color: #93a1a1;
     height: 100%;
+    width: 100%;
     margin: 0;
 }
 
-.chart section {
-    margin: 0;
-    padding: 0;
-    width: 80vw;
-    overflow-x: auto;
-    overflow-y: auto;
-}
-
-.chart table {
-    /* table-layout: fixed; */
-    /*border-collapse: collapse; */
-    border-collapse: separate;
-    /* border: none; */
-    border: 3px solid #aaa;
-/*    flex: 1; */
+.chart {
+    color: #93a1a1;
 }
 
 figcaption {
+    text-align: center;
     color: white;
     font-size: 25px;
+    padding-top: 30px;
     padding-bottom: 10px;
+}
+
+.chart #scrollable {
+    padding: 0;
+    overflow-x: auto;
+    width: 80vw;
+}
+
+.chart table {
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+    border: 3px solid #aaa;
 }
 
 /* =================================================================================== */
@@ -43,8 +42,6 @@ td:first-child {
     position: sticky;
     left: 0;
     z-index: 2;
-    border-left: 3px solid #aaa;
-    border-right: 3px solid #aaa;
 }
 
 /* Locks horizontal header elements during vertical and horizontal scroll */
@@ -60,11 +57,17 @@ thead th:first-child {
     z-index: 3;
 }
 
-/* =================================================================================== */
+/* ===================================================*/
+/* Leftmost element in table head and body formatting */
+/* ===================================================*/
 
 /* .chart .side-blank and .chart .side-heading located in the table head */
 .chart .side-blank {
     background-color: black;
+    /* border-right: 3px solid #aaa; */
+    border-bottom: 3px solid #aaa;
+    margin: 0;
+    padding: 0;
 }
 
 .chart .side-heading {
@@ -72,8 +75,8 @@ thead th:first-child {
     /* height: 40px; */
     border-top: 1px solid #aaa;
     border-bottom: 1px solid #aaa;
-/*    border-left: 3px solid #aaa;
-    border-right: 3px solid #aaa; */
+    border-left: 3px solid #aaa;
+    /* border-right: 3px solid #aaa; */
     font-weight: bold;
     padding-right: 10px;
     padding-left: 10px;
@@ -101,7 +104,8 @@ thead th:first-child {
 } */
 
 .chart .chart-year {
-    border: 3px solid #aaa;
+    border-bottom: 3px solid #aaa;
+    border-left: 3px solid #aaa;
     text-align: center;
     height: 40px;
     font-size: 20px;
@@ -109,7 +113,8 @@ thead th:first-child {
 }
 
 .chart .chart-month {
-    border: 3px solid #aaa;
+    border-bottom: 3px solid #aaa;
+    border-left: 3px solid #aaa;
     text-align: center;
     height: 40px;
     font-weight: bold;
@@ -134,11 +139,11 @@ thead th:first-child {
 }
 
 .chart .chart-day.start {
-    border-left: 3px solid #aaa;
+    border-left: 1px solid #aaa;
 }
 
 .chart .task-start {
-    border-left: 3px solid #aaa;
+    border-left: 1px solid #aaa;
 }
 
 .chart .chart-task {
