--- a/Assets/CSS/chart-style.css
+++ b/Assets/CSS/chart-style.css
@@ -134,6 +134,7 @@ thead th:first-child {
     text-align: center;
 } */
 
+/* Chart Year class */
 .chart .chart-year {
     background-color: black;
     border-bottom: 3px solid #aaa;
@@ -144,6 +145,7 @@ thead th:first-child {
     font-weight: bold;
 }
 
+/* Chart Month class */
 .chart .chart-month {
     background-color: black;
     border-bottom: 3px solid #aaa;
@@ -153,6 +155,7 @@ thead th:first-child {
     font-weight: bold;
 }
 
+/* Chart Day classes */
 .chart .chart-day {
     background-color: black;
     border: 1px solid #aaa;
@@ -168,7 +171,6 @@ thead th:first-child {
 }
 
 .chart .chart-day.weekend {
-    /* background-color: #444; */
     background-color: #2A2A2A;
 }
 
@@ -176,6 +178,30 @@ thead th:first-child {
     border-left: 1px solid #aaa;
 }
 
+/* Chart Date classes */
+.chart .chart-date {
+    background-color: black;
+    border: 1px solid #aaa;
+    text-align: center;
+    height: 40px;
+    width: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.chart .chart-date.today {
+    color: white;
+}
+
+.chart .chart-date.weekend {
+    background-color: #2A2A2A;
+}
+
+.chart .chart-date.start {
+    border-left: 1px solid #aaa;
+}
+
+/* Chart Task classes */
 .chart .task-start {
     border-left: 1px solid #aaa;
 }
