--- a/Assets/CSS/chart-style.css
+++ b/Assets/CSS/chart-style.css
@@ -93,7 +93,23 @@ thead th:first-child {
 /* ===================================================*/
 
 /* .chart .side-blank and .chart .side-heading located in the table head */
-.chart .side-blank {
+.chart .side-blank-chart-year {
+    background-color: black;
+    /* border-right: 3px solid #aaa; */
+    border-bottom: 3px solid #aaa;
+    margin: 0;
+    padding: 0;
+}
+
+.chart .side-blank-chart-month {
+    background-color: black;
+    /* border-right: 3px solid #aaa; */
+    border-bottom: 3px solid #aaa;
+    margin: 0;
+    padding: 0;
+}
+
+.chart .side-blank-chart-day {
     background-color: black;
     /* border-right: 3px solid #aaa; */
     border-bottom: 3px solid #aaa;
@@ -133,6 +149,10 @@ thead th:first-child {
     border-bottom: 1px solid #aaa;
     text-align: center;
 } */
+
+/* =============================================== */
+/* Classes in the table head that are not leftmost */
+/* =============================================== */
 
 /* Chart Year class */
 .chart .chart-year {
