--- a/Assets/CSS/chart-style.css
+++ b/Assets/CSS/chart-style.css
@@ -26,36 +26,21 @@ figcaption {
     padding: 0;
     overflow-x: auto;
     width: 80vw;
-    height: 100%;
+    height: 500px;
 }
 
 .chart table {
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
-    border: 3px solid #aaa;
+    /* border: 3px solid #aaa; */
+    border: none;
+    border-spacing: 0;
 }
 
 /* =================================================================================== */
 /* This section deals with sticky elements for table horizontal and vertical scrolling */
 /* =================================================================================== */
-
-/* Ensures the leftmost td elements are sticky on horizontal scroll */
-/* td:first-child {
-    width: 500px;
-    position: -webkit-sticky;
-    position: sticky;
-    left: 0;
-    z-index: 2;
-} */
-
-/* Locks horizontal header elements during vertical and horizontal scroll */
-/* thead th {
-    position: -webkit-sticky;
-    position: sticky; */
-    /*top: 0; */
-/*    left: 0;
-} */
 
 /* These classes are in the table header at differing heights, yet not on the left most edge */
 /* Hence they need to be locked at different heights during vertical scroll, but able to go off-screen in horizontal scroll */
@@ -65,31 +50,27 @@ thead .chart-year {
     position: sticky;
     top: 0;
     z-index: 2;
-/*    left: 0; */
 }
 
 thead .chart-month {
     position: -webkit-sticky;
     position: sticky;
-    top: 45px;
+    top: 42px;
     z-index: 2;
-/*    left: 0; */
 }
 
 thead .chart-day {
     position: -webkit-sticky;
     position: sticky;
-    top: 90px;
+    top: 84px;
     z-index: 2;
-/*    left: 0; */
 }
 
 thead .chart-date {
     position: -webkit-sticky;
     position: sticky;
-    top: 135px;
+    top: 126px;
     z-index: 2;
-    /*    left: 0; */
 }
 
 /* These classes are on the left hand edge in the table header */
@@ -102,12 +83,13 @@ thead .side-blank-chart-year {
     top: 0;
     left: 0;
     z-index: 3;
+    width: 500px;
 }
 
 thead .side-blank-chart-month {
     position: -webkit-sticky;
     position: sticky;
-    top: 45px;
+    top: 42px;
     left: 0;
     z-index: 3;
 }
@@ -115,7 +97,7 @@ thead .side-blank-chart-month {
 thead .side-blank-chart-day {
     position: -webkit-sticky;
     position: sticky;
-    top: 90px;
+    top: 84px;
     left: 0;
     z-index: 3;
 }
@@ -123,7 +105,7 @@ thead .side-blank-chart-day {
 thead .side-heading {
     position: -webkit-sticky;
     position: sticky;
-    top: 135px;
+    top: 126px;
     left: 0;
     z-index: 3;
 }
@@ -137,14 +119,8 @@ thead .side-heading {
     z-index: 2;
 }
 
-
-/* Ensures the leftmost head element is in front for downward scroll */
-/* thead th:first-child {
-    z-index: 3;
-} */
-
 /* ======================================================== */
-/* This section covers the appearance of teh table elements */
+/* This section covers the appearance of the table elements */
 /* ======================================================== */
 
 /* Leftmost element in table head and body formatting */
@@ -152,60 +128,37 @@ thead .side-heading {
 /* .chart .side-blank and .chart .side-heading located in the table head */
 .chart .side-blank-chart-year {
     background-color: black;
-    /* border-right: 3px solid #aaa; */
-    border-bottom: 3px solid #aaa;
-    margin: 0;
-    padding: 0;
+    border: none;
 }
 
 .chart .side-blank-chart-month {
     background-color: black;
-    /* border-right: 3px solid #aaa; */
-    border-bottom: 3px solid #aaa;
-    margin: 0;
-    padding: 0;
+    border: none;
 }
 
 .chart .side-blank-chart-day {
     background-color: black;
-    /* border-right: 3px solid #aaa; */
-    border-bottom: 3px solid #aaa;
-    margin: 0;
-    padding: 0;
+    border: none;
 }
 
 .chart .side-heading {
     background-color: black;
-    /* height: 40px; */
-    border-top: 1px solid #aaa;
-    border-bottom: 1px solid #aaa;
-    border-left: 3px solid #aaa;
-    /* border-right: 3px solid #aaa; */
+    border: none;
     font-weight: bold;
     padding-right: 10px;
     padding-left: 10px;
     text-align: left;
+    height: 40px;
 }
 
 /* .chart .side-name located first in row in the table body */
 .chart .side-name {
     background-color: black;
-    height: 40px;
-    border-top: 1px solid #aaa;
-    border-bottom: 1px solid #aaa;
-/*    border-left: 3px solid #aaa;
-    border-right: 3px solid #aaa; */
-    /*    border-right: 1px solid #aaa; */
+    border: none;
     padding-right: 10px;
     padding-left: 10px;
-}
-
-/*.chart .side-owner {
     height: 40px;
-    border-top: 1px solid #aaa;
-    border-bottom: 1px solid #aaa;
-    text-align: center;
-} */
+}
 
 /* =============================================== */
 /* Classes in the table head that are not leftmost */
@@ -214,8 +167,7 @@ thead .side-heading {
 /* Chart Year class */
 .chart .chart-year {
     background-color: black;
-    border-bottom: 3px solid #aaa;
-    border-right: 3px solid #aaa;
+    border: none;
     text-align: center;
     height: 40px;
     font-size: 20px;
@@ -225,8 +177,7 @@ thead .side-heading {
 /* Chart Month class */
 .chart .chart-month {
     background-color: black;
-    border-bottom: 3px solid #aaa;
-    border-right: 3px solid #aaa;
+    border: none;
     text-align: center;
     height: 40px;
     font-weight: bold;
@@ -235,7 +186,7 @@ thead .side-heading {
 /* Chart Day classes */
 .chart .chart-day {
     background-color: black;
-    border: 1px solid #aaa;
+    border: none;
     text-align: center;
     height: 40px;
     width: 40px;
@@ -252,13 +203,13 @@ thead .side-heading {
 }
 
 .chart .chart-day.start {
-    border-left: 1px solid #aaa;
+    /* border-left: 1px solid #aaa; */
 }
 
 /* Chart Date classes */
 .chart .chart-date {
     background-color: black;
-    border: 1px solid #aaa;
+    border: none;
     text-align: center;
     height: 40px;
     width: 40px;
@@ -275,12 +226,12 @@ thead .side-heading {
 }
 
 .chart .chart-date.start {
-    border-left: 1px solid #aaa;
+    /* border-left: 1px solid #aaa; */
 }
 
 /* Chart Task classes */
 .chart .task-start {
-    border-left: 1px solid #aaa;
+    /* border-left: 1px solid #aaa; */
 }
 
 .chart .chart-task {
@@ -297,7 +248,7 @@ thead .side-heading {
 }
 
 .chart .task-notes {
-/*    background: white; */
+    background: gray;
     display: none;
     height: 35px;
 }
