Styling updates to input / textarea / select fields

--- a/Assets/CSS/page.css
+++ b/Assets/CSS/page.css
@@ -263,16 +263,22 @@ label {
 input {
     display: table-cell;
     float: left;
+    padding: 4px;
+    border-radius: 3px;
 }
 
 textarea {
     display: table-cell;
     float: left;
+    padding: 4px;
+    border-radius: 3px;
 }
 
 select {
     display: table-cell;
     float: left;
+    padding: 4px;
+    border-radius: 3px;
 }
 
 .submit {
