Updated the comments in all but View objects

--- a/Assets/CSS/page.css
+++ b/Assets/CSS/page.css
@@ -1,3 +1,8 @@
+/* Created by Nick Harle */
+/* Date: 04/04/2019      */
+/* This CSS sheet styles the page template, input forms and the project documents page  */
+
+
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 /* =============================== */
