--- a/Assets/CSS/chart-style.css
+++ b/Assets/CSS/chart-style.css
@@ -1,3 +1,6 @@
+/* Created by Nick Harle */
+/* Date: 04/04/2019      */
+/* This CSS sheet styles the Gantt Chart only */
 
 /* ============================================ */
 /* Basic figure layout - in order of appearance */
