--- a/Assets/CSS/chart-style.css
+++ b/Assets/CSS/chart-style.css
@@ -22,14 +22,14 @@ figcaption {
     color: white;
     font-size: 25px;
     padding-top: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 0;
 }
 
 .chart #scrollable {
     padding: 0;
     overflow-x: auto;
     width: 80vw;
-    height: 500px;
+    height: 625px;
 }
 
 .chart table {
@@ -38,6 +38,7 @@ figcaption {
     border-collapse: collapse;
     /* border: 3px solid #aaa; */
     border: none;
+    padding: 0;
     border-spacing: 0;
 }
 
@@ -238,15 +239,16 @@ thead .side-heading {
 }
 
 .chart .chart-task {
+    border: 1px solid darkgray;
     border-radius: 5px;
     width: 100%;
-    height: 15px;
+    height: 40px;
     background: lightblue;
 }
 
 .chart .chart-fill {
     border-radius: 5px;
-    height: 15px;
+    height: 40px;
     background: darkblue;
 }
 
