--- a/Assets/CSS/page.css
+++ b/Assets/CSS/page.css
@@ -30,7 +30,7 @@ main {
 
     /* Main width 80% of screen width and main height 60% */
     max-width: 80%;
-    height: 60vh;
+    height: 800px;
 
     /* Centre main in screen */
     margin-left: auto;
@@ -86,6 +86,10 @@ h1 {
 h2 {
     font-weight: 700;
     font-size: 20px;
+    color: darkgrey;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 0;
 }
 
 p, ul {
