--- a/Assets/CSS/page.css
+++ b/Assets/CSS/page.css
@@ -317,6 +317,12 @@ select {
     background-color: darkgrey;
 }
 
+#error h2 {
+    color: black;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 /* ========================== */
 /* Now the responsive entries */
 /* ========================== */
